--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "start:inside-gb:reset": "yarn clean:runtime && yarn start:inside-gb --reset-cache",
     "start:debug": "node --inspect-brk node_modules/.bin/react-native start",
     "start:inside-gb:debug": "node --inspect-brk node_modules/.bin/react-native start:inside-gb",
+    "prebundle:android": "patch -p0 < metro-watch-false.patch",
+    "postbundle:android": "patch -p0 -R < metro-watch-false.patch",
     "bundle": "yarn bundle:android && yarn bundle:ios",
     "bundle:android": "mkdir -p bundle/android && react-native bundle --platform android --dev false --entry-file index.js --assets-dest bundle/android --bundle-output bundle/android/App.js --sourcemap-output bundle/android/App.js.map --config rn-cli.bundle.config.js",
     "bundle:ios": "mkdir -p bundle/ios && react-native bundle --platform ios --dev false --entry-file index.js --assets-dest bundle/ios --bundle-output bundle/ios/App.js --sourcemap-output bundle/ios/App.js.map",
